--- a/Apache单个IP配置多个网站.html
+++ b/Apache单个IP配置多个网站.html
@@ -152,7 +152,7 @@ sup {
 	}
 }
 </style>
-<title>具体操作步骤</title>
+<title>前提</title>
 
 </head>
 <body>
@@ -161,6 +161,22 @@ sup {
 <blockquote><p>术语<a href="http://httpd.apache.org/docs/2.4/vhosts/">虚拟主机</a>：指的是在单一机器上运行多个网站 (例如 company1.example.com 和 company2.example.com) 。 虚拟主机可以“基于 IP”，即每个 IP 一个站点； 或者“基于名称”， 即每个 IP 多个站点。这些站点运行在同一物理服务器上的事实不会明显的透漏给最终用户。</p></blockquote>
 
 <p>引申:同上、单域名多网站也是可行的。</p>
+
+<h2>前提</h2>
+
+<h5>开启虚拟机</h5>
+
+<p>在apache配置文件http.conf中找到配置项</p>
+
+<pre><code>    # Virtual hosts                                                                                                         
+    #Include /Applications/XAMPP/etc/extra/httpd-vhosts.conf  
+</code></pre>
+
+<p>修改为</p>
+
+<pre><code>    # Virtual hosts                                                                                                         
+    Include /Applications/XAMPP/etc/extra/httpd-vhosts.conf  
+</code></pre>
 
 <h2>具体操作步骤</h2>
 
@@ -191,5 +207,7 @@ ErrorLog "logs/crm2-error_log"
 CustomLog "logs/crm2_log" common
 &lt;/VirtualHost&gt;
 </code></pre>
+
+<p><strong>坑：配制虚拟机的时候，一直object not found。后来查找是路径后面出现了乱码～。</strong></p>
 </body>
 </html>
