--- a/Apache单个IP配置多个网站.html
+++ b/Apache单个IP配置多个网站.html
@@ -208,7 +208,8 @@ CustomLog "logs/crm2_log" common
 &lt;/VirtualHost&gt;
 </code></pre>
 
-<p>3.最后,执行 /opt/lampp/lampp  reloadapache。
-<strong>坑：配制虚拟机的时候，一直object not found。后来查找是路径后面出现了乱码～。</strong></p>
+<p>3.最后,执行 /opt/lampp/lampp  reloadapache。</p>
+
+<p><strong>坑：配制虚拟机的时候，一直object not found。后来查找是路径后面出现了乱码～。</strong></p>
 </body>
 </html>
