--- a/Apache单个IP配置多个网站.html
+++ b/Apache单个IP配置多个网站.html
@@ -168,14 +168,14 @@ sup {
 
 <p>在apache配置文件http.conf中找到配置项</p>
 
-<pre><code>    # Virtual hosts                                                                                                         
-    #Include /Applications/XAMPP/etc/extra/httpd-vhosts.conf  
+<pre><code>#Virtual hosts                         
+#Include /Applications/XAMPP/etc/extra/httpd-vhosts.conf`
 </code></pre>
 
 <p>修改为</p>
 
-<pre><code>    # Virtual hosts                                                                                                         
-    Include /Applications/XAMPP/etc/extra/httpd-vhosts.conf  
+<pre><code>    #Virtual hosts                                                                     
+    Include /Applications/XAMPP/etc/extra/httpd-vhosts.conf 
 </code></pre>
 
 <h2>具体操作步骤</h2>
