--- a/程序员之mac平台使用初体验.html
+++ b/程序员之mac平台使用初体验.html
@@ -199,6 +199,8 @@ sup {
 </ol>
 </li>
 <li>印象笔记(一直在使用，强烈推荐),<strong><a href="https://maxiang.io/basic">马克飞象</a>支持印象笔记版的Markdown，据说已经开始收费。具体还没试过</strong>。</li>
+<li>虚拟机 <a href="http://www.jb51.net/softs/377756.html#down">Vmware fusion 8 Pro</a></li>
+<li>解压/压缩 <a href="http://www.macgg.com/archives/12962.html">Entropy 1.5.6</a></li>
 <li>Markdown编辑器
 
 <ol>
