--- a/程序员之mac平台使用初体验.html
+++ b/程序员之mac平台使用初体验.html
@@ -198,7 +198,7 @@ sup {
 <li> github <a href="https://desktop.github.com/">github for mac</a></li>
 </ol>
 </li>
-<li>印象笔记(一直在使用，强烈推荐),<strong><a href="https://maxiang.io/basic">马克飞象</a>支持印象笔记版的Markdown，据说已经开始收费。具体还没试过</strong>。</li>
+<li>印象笔记(一直在使用，强烈推荐),<strong><a href="https://maxiang.io/basic">马克飞象</a>需要收费</strong>。</li>
 <li>虚拟机 <a href="http://www.jb51.net/softs/377756.html#down">Vmware fusion 8 Pro</a></li>
 <li>解压/压缩 <a href="http://www.macgg.com/archives/12962.html">Entropy 1.5.6</a></li>
 <li>Markdown编辑器
@@ -209,7 +209,8 @@ sup {
 </ol>
 </li>
 <li>图库工具  <a href="http://www.yotuku.cn/#!/">yotuku</a>,<em>使用自己的七牛空间存储图片。文件安全性比较可信，而且免费</em>。</li>
-<li>google chrome(一直使用，暂不考虑转移到其他浏览器)
+<li>google chrome(一直使用，暂不考虑转移到其他浏览器)</li>
+<li><a href="https://www.wunderlist.com/zh/">[个人]任务管理</a>
 
 <h2>生活</h2></li>
 <li>BT下载 <a href="http://mac.xunlei.com/">迅雷 for mac</a></li>
