更新mac软件工具

--- a/程序员之mac平台使用初体验.html
+++ b/程序员之mac平台使用初体验.html
@@ -208,12 +208,15 @@ sup {
 <li><a href="http://macdown.uranusjr.com/">Macdown</a> <em>对Mou的扩展，功能比较多，暂未体验。这里仅作备注。</em></li>
 </ol>
 </li>
+<li>文本编辑器 <a href="http://www.sublimetext.com/3">Sublime Text 3</a></li>
 <li>图库工具  <a href="http://www.yotuku.cn/#!/">yotuku</a>,<em>使用自己的七牛空间存储图片。文件安全性比较可信，而且免费</em>。</li>
 <li>google chrome(一直使用，暂不考虑转移到其他浏览器)</li>
 <li><a href="https://www.wunderlist.com/zh/">[个人]任务管理</a>
 
 <h2>生活</h2></li>
 <li>BT下载 <a href="http://mac.xunlei.com/">迅雷 for mac</a></li>
+<li>视频播放 <a href="http://www.videolan.org/">VLC media player</a></li>
+
 </ul>
 
 
