--- a/程序员之mac平台使用初体验.html
+++ b/程序员之mac平台使用初体验.html
@@ -1,225 +1,75 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-<style>
-h1,
-h2, 
-h3,
-h4,
-h5,
-h6,
-p, 
-blockquote {
-    margin: 0;
-    padding: 0;
-}
-body {
-    font-family: "Helvetica Neue", Helvetica, "Hiragino Sans GB", Arial, sans-serif;
-    font-size: 13px;
-    line-height: 18px;
-    color: #737373;
-    background-color: white;
-    margin: 10px 13px 10px 13px;
-}
-table {
-	margin: 10px 0 15px 0;
-	border-collapse: collapse;
-}
-td,th {	
-	border: 1px solid #ddd;
-	padding: 3px 10px;
-}
-th {
-	padding: 5px 10px;	
-}
+<!DOCTYPE html><html><head><title>程序员之MAC平台使用初体验</title><meta charset='utf-8'><link href='https://dn-maxiang.qbox.me/res-min/themes/marxico.css' rel='stylesheet'><style></style></head><body><div id='preview-contents' class='note-content'>
+                        <div id="wmd-preview" class="preview-content"></div>
+                    <div id="wmd-preview-section-131" class="wmd-preview-section preview-content">
 
-a {
-    color: #0069d6;
-}
-a:hover {
-    color: #0050a3;
-    text-decoration: none;
-}
-a img {
-    border: none;
-}
-p {
-    margin-bottom: 9px;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    color: #404040;
-    line-height: 36px;
-}
-h1 {
-    margin-bottom: 18px;
-    font-size: 30px;
-}
-h2 {
-    font-size: 24px;
-}
-h3 {
-    font-size: 18px;
-}
-h4 {
-    font-size: 16px;
-}
-h5 {
-    font-size: 14px;
-}
-h6 {
-    font-size: 13px;
-}
-hr {
-    margin: 0 0 19px;
-    border: 0;
-    border-bottom: 1px solid #ccc;
-}
-blockquote {
-    padding: 13px 13px 21px 15px;
-    margin-bottom: 18px;
-    font-family:georgia,serif;
-    font-style: italic;
-}
-blockquote:before {
-    content:"\201C";
-    font-size:40px;
-    margin-left:-10px;
-    font-family:georgia,serif;
-    color:#eee;
-}
-blockquote p {
-    font-size: 14px;
-    font-weight: 300;
-    line-height: 18px;
-    margin-bottom: 0;
-    font-style: italic;
-}
-code, pre {
-    font-family: Monaco, Andale Mono, Courier New, monospace;
-}
-code {
-    background-color: #fee9cc;
-    color: rgba(0, 0, 0, 0.75);
-    padding: 1px 3px;
-    font-size: 12px;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-}
-pre {
-    display: block;
-    padding: 14px;
-    margin: 0 0 18px;
-    line-height: 16px;
-    font-size: 11px;
-    border: 1px solid #d9d9d9;
-    white-space: pre-wrap;
-    word-wrap: break-word;
-}
-pre code {
-    background-color: #fff;
-    color:#737373;
-    font-size: 11px;
-    padding: 0;
-}
-sup {
-    font-size: 0.83em;
-    vertical-align: super;
-    line-height: 0;
-}
-* {
-	-webkit-print-color-adjust: exact;
-}
-@media screen and (min-width: 914px) {
-    body {
-        width: 854px;
-        margin:10px auto;
-    }
-}
-@media print {
-	body,code,pre code,h1,h2,h3,h4,h5,h6 {
-		color: black;
-	}
-	table, pre {
-		page-break-inside: avoid;
-	}
-}
-</style>
-<title>程序员之MAC平台使用初体验</title>
+<p></p></div><div id="wmd-preview-section-41" class="wmd-preview-section preview-content">
 
-</head>
-<body>
-<h1>程序员之MAC平台使用初体验</h1>
+<h1 id="程序员之mac平台使用初体验">程序员之MAC平台使用初体验</h1>
 
-<blockquote><p> 刚入手一台mac pro，最近几天慢慢在从windows平台转移过来。找到很多优秀软件、也学习到了新技能。现在用markdown编辑器整理一篇文章。</p></blockquote>
+<blockquote>
+  <p>刚入手一台mac pro，最近几天慢慢在从windows平台转移过来。找到很多优秀软件、也学习到了新技能。现在用markdown编辑器整理一篇文章。</p>
+</blockquote>
 
-<h2>即时通信</h2>
+</div><div id="wmd-preview-section-42" class="wmd-preview-section preview-content">
 
-<ul>
-<li>QQ</li>
+<h2 id="即时通信">即时通信</h2>
+
+<ul><li>QQ </li>
 <li>微信 for mac</li>
-<li>Skype</li>
+<li>Skype </li>
 </ul>
 
+</div><div id="wmd-preview-section-749" class="wmd-preview-section preview-content">
 
-<h2>PHP开发工具</h2>
+<h2 id="php开发工具">PHP开发工具</h2>
 
-<ul>
-<li>Zend studio 11.0.2(下载地址百度网盘)</li>
-<li>web集成开发环境  <a href="www.apachefriends.org/">xampp</a></li>
-<li>mysql管理工具 <strong>暂未安装</strong></li>
-</ul>
+<ul><li>Zend studio </li>
+<li>web集成开发环境  <a href="http://www.apachefriends.org/" target="_blank">xampp</a></li>
+<li>mysql管理工具 <strong>暂未安装,先用phpmyadmin</strong></li>
+</ul></div><div id="wmd-preview-section-925" class="wmd-preview-section preview-content">
 
+<h2 id="开发工具">开发工具</h2>
 
-<h2>开发工具</h2>
-
-<ul>
-<li>FTP客户端  <a href="https://filezilla-project.org/download.php?type=client">FileZilla</a></li>
-<li>SSH OS自带</li>
-<li>远程桌面
-
+<ul><li><a href="http://ohmyz.sh/" target="_blank">oh-my-zsh</a> <br>
 <ol>
-<li>自己家里局域网使用  <a href="http://www.maczapp.com/jump-desktop">Jump Desktop</a></li>
-<li>商务使用  <a href="http://download.teamviewer.com/download/version_7x/TeamViewer_Setup.exe">teamviewer7.0</a></li>
-</ol>
-</li>
-<li>文档编辑  <a href="" title="http://pan.baidu.com/s/1kTplM2F&quot; &quot;密码:btwn">office for mac 2016大客户版</a></li>
-<li>代码管理
-
+<li rel="1"><a href="https://github.com/zsh-users/zsh-syntax-highlighting" target="_blank">zsh-users/zsh-syntax-highlighting</a></li></ol></li>
+<li><a href="http://brew.sh/" target="_blank">brew</a></li>
+<li><a href="http://www.iterm2.com/" target="_blank">iterm2</a></li>
+<li>FTP客户端  <a href="https://filezilla-project.org/download.php?type=client" target="_blank">FileZilla</a></li>
+<li>远程桌面 <br>
 <ol>
-<li> svn OS自带, 在terminal中输出svn，os会自动提示安装</li>
-<li> github <a href="https://desktop.github.com/">github for mac</a></li>
-</ol>
-</li>
-<li>印象笔记(一直在使用，强烈推荐),<strong><a href="https://maxiang.io/basic">马克飞象</a>需要收费</strong>。</li>
-<li>虚拟机 <a href="http://www.jb51.net/softs/377756.html#down">Vmware fusion 8 Pro</a></li>
-<li>解压/压缩 <a href="http://www.macgg.com/archives/12962.html">Entropy 1.5.6</a></li>
-<li>Markdown编辑器
-
+<li rel="1">自己家里局域网使用  <a href="http://www.maczapp.com/jump-desktop" target="_blank">Jump Desktop</a></li>
+<li rel="2">商务使用  <a href="http://download.teamviewer.com/download/version_7x/TeamViewer_Setup.exe" target="_blank">teamviewer7.0</a></li></ol></li>
+<li>文档编辑  [office for mac 2016大客户版](“<a href="http://pan.baidu.com/s/1kTplM2F" target="_blank">http://pan.baidu.com/s/1kTplM2F</a>” “密码:btwn”) </li>
+<li>代码管理 <br>
 <ol>
-<li><a href="http://25.io/mou/">Mou</a> <em>正在使用，感觉比较简单</em></li>
-<li><a href="http://macdown.uranusjr.com/">Macdown</a> <em>对Mou的扩展，功能比较多，暂未体验。这里仅作备注。</em></li>
-</ol>
-</li>
-<li>文本编辑器 <a href="http://www.sublimetext.com/3">Sublime Text 3</a></li>
-<li>图库工具  <a href="http://www.yotuku.cn/#!/">yotuku</a>,<em>使用自己的七牛空间存储图片。文件安全性比较可信，而且免费</em>。</li>
-<li>google chrome(一直使用，暂不考虑转移到其他浏览器)</li>
-<li><a href="https://www.wunderlist.com/zh/">[个人]任务管理</a>
+<li rel="1">svn OS自带, 在terminal中输出svn，os会自动提示安装</li>
+<li rel="2">github <a href="https://desktop.github.com/" target="_blank">github for mac</a> </li></ol></li>
+<li>印象笔记(一直在使用，强烈推荐),<strong><a href="https://maxiang.io/basic" target="_blank">马克飞象</a>支持印象笔记版的Markdown，据说已经开始收费。具体还没试过</strong>。</li>
+<li>虚拟机 <a href="http://www.jb51.net/softs/377756.html#down" target="_blank">Vmware fusion 8 Pro</a></li>
+<li>解压/压缩 <a href="http://www.macgg.com/archives/12962.html" target="_blank">Entropy 1.5.6</a></li>
+<li>Markdown编辑器 <br>
+<ol>
+<li rel="1"><a href="http://25.io/mou/" target="_blank">Mou</a> <em>正在使用，感觉比较简单</em></li>
+<li rel="2"><a href="http://macdown.uranusjr.com/" target="_blank">Macdown</a> <em>对Mou的扩展，功能比较多，暂未体验。这里仅作备注。</em></li></ol></li>
+<li>图库工具  <a href="http://www.yotuku.cn/#!/" target="_blank">yotuku</a>,<em>使用自己的七牛空间存储图片。文件安全性比较可信，而且免费</em>。</li>
+<li>google chrome(一直使用，暂不考虑转移到其他浏览器) <br>
+<ol>
+<li rel="1">API测试工具 <a href="https://beta.getpostman.com/" target="_blank">postman</a></li>
+<li rel="2">OneTab</li>
+<li rel="3">广告拦截 [Adblock]</li>
+<li rel="4">Octotree</li>
+<li rel="5">BuiltWith Technology Profiler</li>
+<li rel="6">JSONView</li>
+<li rel="7">印象笔记·剪藏</li>
+<li rel="8">添加到奇妙清单</li></ol></li>
+<li><a href="https://www.wunderlist.com/zh/" target="_blank">[个人]任务管理</a></li>
+</ul></div><div id="wmd-preview-section-261" class="wmd-preview-section preview-content">
 
-<h2>生活</h2></li>
-<li>BT下载 <a href="http://mac.xunlei.com/">迅雷 for mac</a></li>
-<li>视频播放 <a href="http://www.videolan.org/">VLC media player</a></li>
+<h2 id="生活">生活</h2>
 
-</ul>
+<ul><li>BT下载 <a href="http://mac.xunlei.com/" target="_blank">迅雷 for mac</a></li>
+<li>视频播放 <a href="http://www.videolan.org/" target="_blank">VLC media player</a></li>
+</ul></div><div id="wmd-preview-section-46" class="wmd-preview-section preview-content">
 
-
-<h4>持续更新中....</h4>
-</body>
-</html>
+<h4 id="持续更新中">持续更新中….</h4></div><div id="wmd-preview-section-footnotes" class="preview-content"></div></div></body></html>
