新增发现前后台开发模式一文

--- a/发现新的前后台开发模式.html
+++ b/发现新的前后台开发模式.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html><html><head><title>发现前后台开发模式</title><meta charset='utf-8'><link href='https://dn-maxiang.qbox.me/res-min/themes/marxico.css' rel='stylesheet'><style></style></head><body><div id='preview-contents' class='note-content'>
+<!DOCTYPE html><html><head><title>发现新的前后台开发模式</title><meta charset='utf-8'><link href='https://dn-maxiang.qbox.me/res-min/themes/marxico.css' rel='stylesheet'><style></style></head><body><div id='preview-contents' class='note-content'>
                         <div id="wmd-preview" class="preview-content"></div>
                     <div id="wmd-preview-section-970" class="wmd-preview-section preview-content">
 
-</div><div id="wmd-preview-section-4998" class="wmd-preview-section preview-content">
+</div><div id="wmd-preview-section-6204" class="wmd-preview-section preview-content">
 
-<h2 id="发现前后台开发模式">发现前后台开发模式</h2>
+<h2 id="发现新的前后台开发模式">发现新的前后台开发模式</h2>
 
 <blockquote>
   <p>我是主要做后台开发的，一直想找一款可以测试进行HTTP接口测试的工具，前几天在浏览博客的时候、发现了<a href="http://mockjs.com/" target="_blank">mock.js</a>和<a href="https://chrome.google.com/webstore/detail/postman-rest-client-packa/fhbjgbiflinjbdggehcddcbncdddomop?hl=en" target="_blank">postman</a>这两个东西、刚好满足我的要求。而且mock.js的使用可以节省我在联调阶段浪费的精力、对于前台也是有利的。</p>
