--- a/发现新的前后台开发模式.html
+++ b/发现新的前后台开发模式.html
@@ -42,8 +42,8 @@
 
 <p>mock.js的使用简化了前台需要考虑的内容，在不改变URL的情况下，前端就可独立于后台进行开发。而联调期间后台也不需要深入前台内部。有问题就找前台了。连URL 都不用修改。。。那酸爽。 <br>
 postman作为一个测试工具，太犀利了。用它查看结果、记录调试历史、最后还可以积累一批测试用例。可以拿来做自动化测试。还可以作为API文档来使用。 <br>
-学习期间，自己做了个案例<a href="https://github.com/cglu/tlook/tree/master/B00002_html~mock" target="_blank">github地址</a>。mock.js只写了jquery，对我来说够用了。其他的可以参加官方的demo。postman的使用效果截了一个图放到了项目里面。。。</p></div><div id="wmd-preview-section-4789" class="wmd-preview-section preview-content">
+学习期间，自己做了个案例<a href="https://github.com/cglu/tlook/tree/master/B00002_html~mock" target="_blank">github地址</a>。mock.js只写了jquery，对我来说够用了。其他的可以参加官方的demo。postman的使用效果截了一个图放到了项目里面。。。</p></div><div id="wmd-preview-section-6346" class="wmd-preview-section preview-content">
 
 <h3 id="总结">总结</h3>
 
-<p>多看看文章、是有好处的。。。</p></div><div id="wmd-preview-section-footnotes" class="preview-content"></div></div></body></html>
+<p>通过利用postman和mock.js两个工具、改善了前后的开发方式。提高了开发效率。</p></div><div id="wmd-preview-section-footnotes" class="preview-content"></div></div></body></html>
