新增发现前后台开发模式一文

--- a/发现新的前后台开发模式.html
+++ b/发现新的前后台开发模式.html
@@ -36,12 +36,12 @@
 
 </div><div id="wmd-preview-section-4077" class="wmd-preview-section preview-content">
 
-<h3 id="别怀疑看起来就是那么古老不过现在以上都不在是问题">别怀疑、看起来就是那么古老！！！不过、现在以上都不在是问题</h3></div><div id="wmd-preview-section-6201" class="wmd-preview-section preview-content">
+<h3 id="别怀疑看起来就是那么古老不过现在以上都不在是问题">别怀疑、看起来就是那么古老！！！不过、现在以上都不在是问题</h3></div><div id="wmd-preview-section-6363" class="wmd-preview-section preview-content">
 
 <h3 id="体验">体验</h3>
 
 <p>mock.js的使用简化了前台需要考虑的内容，在不改变URL的情况下，前端就可独立于后台进行开发。而联调期间后台也不需要深入前台内部。有问题就找前台了。连URL 都不用修改。。。那酸爽。 <br>
-postman作为一个测试工具，太犀利了。用它查看结果、记录调试历史、最后还可以积累一批测试用例。可以拿来做自动化测试。还可以作为API文档来使用。 <br>
+postman作为一个调试工具，太犀利了。用它查看结果、记录调试历史、最后还可以积累一批测试用例。可以拿来做自动化测试。还可以作为API文档来使用。 <br>
 学习期间，自己做了个案例<a href="https://github.com/cglu/tlook/tree/master/B00002_html~mock" target="_blank">github地址</a>。mock.js只写了jquery，对我来说够用了。其他的可以参加官方的demo。postman的使用效果截了一个图放到了项目里面。。。</p></div><div id="wmd-preview-section-6346" class="wmd-preview-section preview-content">
 
 <h3 id="总结">总结</h3>
